# TopoLite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  Doxyfile.bak  README.md  README.rst  ipopt.out  refs.bib
ext/: CMakeLists.txt
ext/adept2/lib/: libadept.0.dylib  libadept.dylib
ext/clipper/: CMakeLists.txt
ext/cmake/: FindClipper.cmake  FindGLUI.cmake  FindIPOPT.cmake  FindLIBIGL.cmake  FindNanoGUI.cmake  FindPUGIXML.cmake  FindQuickHull.cmake
ext/libigl/: CMakeLists.txt
ext/libigl/cmake/: FindMOSEK.cmake  libigl.cmake
ext/nanogui/src/: renderpass_metal.mm
ext/pugixml/: CMakeLists.txt
ext/pugixml/src/: pugixml.hpp
ext/pybind11/docs/: changelog.rst
ext/quickhull/: CMakeLists.txt
ext/shapeop/: CMakeLists.txt  readme.txt
ext/shapeop/applications/: CMakeLists.txt
ext/shapeop/doc/: DoxyShapeOp.bib  DoxyShapeOp.in  Tutorial-AddingConstraints.dox  libShapeOp.dox  main.dox
ext/shapeop/libShapeOp/: CMakeLists.txt
ext/tbb/python/: index.html
gui/: CMakeLists.txt
gui/Mesh/: gui_PolyMesh.h  gui_PolyMeshLists.h
gui/RenderObject/: gui_PolyMeshLists.h  gui_RenderObject.h  gui_SceneObject.h
gui/RenderObjects/: CMakeLists.txt  guiScene_Base.h  guiShader_Lines.h  guiShader_PolyMeshes.h  gui_Lines.h  gui_PolyMeshLists.h  gui_RenderObject.h  gui_SceneObject.h
gui/UI/: CMakeLists.txt
gui/UI/StructureChecker/: CMakeLists.txt  guiMain_StructureChecker.cpp  guiManager_StructureChecker.h
gui/UI/Test/: CMakeLists.txt  guiMain_BezierTest.cpp
gui/UI/TopoCreator/: CMakeLists.txt  guiMain_TopoCreator.cpp  guiManager_TopoCreator.cpp  guiManager_TopoCreator.h
gui/Utility/: CMakeLists.txt  gui_Arcball.h  gui_LoadScene.h  gui_Math.h  gui_TopoManager.cpp  gui_TopoManager.h  gui_TrackBall2D.h  gui_TrackBall3D.h
gui/Widget/: CMakeLists.txt  gui_2D_Canvas.h  gui_2Dball.h  gui_Arcball.h  gui_ArcballScene.h  gui_Arcball_Canvas.h  gui_CheckBoxBool.h  gui_LoadScene.h  gui_ParameterObject.h  gui_SliderFloat.h  gui_SliderInt.h
gui/Widget/Canvas/: CMakeLists.txt  guiCanvas_2DArcball.h  guiCanvas_3DArcball.h
gui/Widget/Controls/: CMakeLists.txt  guiControls_CheckBoxBool.h  guiControls_SliderFloat.h  guiControls_SliderInt.h
gui/Widget/Dialog/: CMakeLists.txt  guiDialog_YesNoCancel.h
gui/shader/: Lines.vert  Lines_frag.metal  Lines_vert.metal  PolyMeshAnimation.frag  PolyMeshAnimation_frag.metal  PolyMeshAnimation_vert.metal  PolyMesh_frag.metal  PolyMesh_vert.metal  metal_shader.h
gui/shader/metal/: Lines_vert.metal  PolyMeshes_frag.metal  PolyMeshes_vert.metal
gui/shader/opengl/: Lines.frag  PolyMeshes.frag  PolyMeshes.vert
gui/ui/: Arcball.h  guiMain.cpp  gui_ArcballScene.h  gui_BezierTest.cpp  gui_InterlockingMain.cpp  gui_LoadScene.h  gui_TopoCreatorMain.cpp
rhino_plugin/: CMakeLists.txt  CSharpCommon.h  CSharpExtern.cpp  CSharpExtern.h
src/GUI/: CMakeLists.txt  NanoViewer.cpp  NanoViewer.h  main.cpp  viewer.cpp  viewer.h
src/TopoLite/: CMakeLists.txt
src/TopoLite/ContactGraph/: ContactGraph.cpp  ContactGraph.h  ContactGraphMosekSolver.cpp  ContactGraphMosekSolver.h  ContactGraphNode.h  PolyhedralCone.h
src/TopoLite/CrossMesh/: AugmentedVectorCreator.cpp  AugmentedVectorCreator.h  BaseMeshCreator.cpp  BaseMeshCreator.h  BaseMeshOptimizer.cpp  BaseMeshOptimizer.h  CMakeLists.txt  CrossMeshCreator.cpp  CrossMeshCreator.h  PatternCreator.cpp  PatternCreator.h  QuadTree.h
src/TopoLite/ExternC/: CSharpExtern.cpp  CSharpExtern.h
src/TopoLite/GUI/: guiMain.cpp
src/TopoLite/IO/: CMakeLists.txt  IOData.h  InputVar.cpp  InputVar.h  JsonIO.cpp  JsonIO.h  JsonIOReader.cpp  JsonIOReader.h  JsonIOWriter.cpp  JsonIOWriter.h  XMLIO.cpp  XMLIO.h  XMLIO_backward.cpp  XMLIO_backward.h
src/TopoLite/Interlocking/: CMakeLists.txt  ContactGraph.cpp  ContactGraph.h  ContactGraphEdge.h  ContactGraphNode.h  InterlockingSolver.cpp  InterlockingSolver.h  InterlockingSolver_AffineScaling.cpp  InterlockingSolver_AffineScaling.h  InterlockingSolver_Clp.cpp  InterlockingSolver_Clp.h  InterlockingSolver_Ipopt.cpp  InterlockingSolver_Ipopt.h  Ipopt_Interlocking_Problem.cpp  Ipopt_Interlocking_Problem.h
src/TopoLite/Mesh/: CMakeLists.txt  Cross.cpp  Cross.h  CrossMesh.cpp  CrossMesh.h  HEdgeMesh.cpp  HEdgeMesh.h  MeshConverter.cpp  MeshConverter.h  PolyMesh.cpp  PolyMesh.h  PolyMesh_AABBTree.h  Polygon.cpp  Polygon.h
src/TopoLite/PyInterface/: PyContactGraph.h  PyInterlockChecker.h  PyParamList.h  PyPolyMesh.h  PyTopoCreator.h  TopoStructure.py  Voxel.py  puzOBJ.py  pyMain.cpp  test.py
src/TopoLite/Python/: Voxel.py  drawPolygons.py  puzIO.py
src/TopoLite/Structure/: CMakeLists.txt  ConvexBlock.cpp  ConvexBlock.h  Part.cpp  Part.h  PartGeom.cpp  PartGeom.h  PartGroup.cpp  PartGroup.h  Struc.cpp  Struc.h  StrucCreator.cpp  StrucCreator.h
src/TopoLite/Utility/: Bezier.h  CMakeLists.txt  ConvexHull2D.cpp  ConvexHull2D.h  ConvexHull3D.h  (+18 more)
src/gui/: CMakeLists.txt
src/quickhull/: CMakeLists.txt
test/: CMakeLists.txt  MeshConverter.cpp  PolyMesh.cpp  Test_Main.cpp  XMLIO.cpp  crossMeshCreator.cpp
test/CrossMesh/: CMakeLists.txt  Test_AugmentedVectorCreator.cpp  Test_BaseMeshCreator.cpp  Test_PatternCreator.cpp
test/IO/: CMakeLists.txt  Test_InputVar.cpp  Test_JsonIO.cpp  Test_JsonReaderIO.cpp  Test_JsonWriterIO.cpp  Test_XMLIO.cpp  Test_XMLIO_backward.cpp
test/Interlocking/: CMakeLists.txt  Problem_LP_bigm.cpp  Problem_LP_bigm.h  Problem_LP_simple.cpp  Problem_LP_simple.h  Test_CLP_implementation.cpp  Test_ContactGraph.cpp  Test_IPOPT_implementation.cpp  Test_InterlockingSolver_Clp.cpp  Test_InterlockingSolver_Ipopt.cpp  Test_Ipopt_interlocking_problem.cpp  Test_ipopt.cpp  Test_toymodel_Ipopt.cpp  Test_toymodel_clp.cpp  ipopt_problems.cpp  ipopt_problems.h
test/Mesh/: CMakeLists.txt  Test_Cross.cpp  Test_CrossMesh.cpp  Test_PolyMesh.cpp  Test_PolyMesh_AABBTree.cpp  Test_Polygon.cpp
test/Structure/: CMakeLists.txt  Test_ConvexBlock.cpp
test/Utility/: CMakeLists.txt  ListVector3.cpp  ListVector3.h  Test_ConvexHull2D.cpp  Test_ConvexHull3D.cpp  Test_GeometricPrimitives.cpp  Test_PolyPolyBoolean.cpp  Test_SparseOperations.cpp
(+310 files in other folders)
